Task item width styling removed so it displays correctly on mobile

--- a/src/components/tasks/AddTaskItem.module.css
+++ b/src/components/tasks/AddTaskItem.module.css
@@ -9,6 +9,5 @@
 }
 
 .taskName {
-	width: 22rem;
 	font-size: 10pt;
 }
